--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ a {
   align-items: center;
   padding-top: 24px;
   padding-bottom: 25px;
+  border-bottom: 1px solid #ECECEC;;
 }
 .conteiner-nav {
   display: flex;
