--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ a {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.1923;
+  padding: 23px 0px;
   margin-right: 93px;
 }
 .piece-logo {
@@ -69,9 +70,7 @@ p {
 .top-line {
   display: flex;
   align-items: center;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #ECECEC;;
+  /* border-bottom: 1px solid #ECECEC;; */
 }
 .container-nav {
   display: flex;
@@ -80,6 +79,7 @@ p {
 
 .site-nav{
   display: flex;
+  padding: 32px 0px;
 }
 
 .site-nav .item:not(:last-child){
@@ -107,6 +107,7 @@ p {
 .contacts{
   display: flex;
   align-items: center;
+  padding: 32px 0px;
   margin-left: auto;
 }
 
@@ -159,7 +160,7 @@ p {
 }
 /* Секції */
 .section{
-  margin: auto;
+  margin: 0px auto;
   padding: 94px 0;
 
 }
@@ -249,6 +250,7 @@ p {
   font-size: 16px;
   line-height: 1.1875;
   text-align: center;
+  margin-bottom: 10px;
 
 
 }
@@ -258,7 +260,7 @@ p {
   line-height: 1.1875;
   text-align: center;
   margin: 0%;
-  padding-bottom: 30px;
+  
 }
 
 /* футер */
@@ -383,6 +385,6 @@ p {
   font-size: 16px;
   line-height: 1.875;
 }
-.hader-portfolio{
-  margin-bottom: 94px;
+.header-portfolio{
+  border-bottom: 1px solid #ECECEC;
 }
